# mininim

./: .gdbinit  .gitignore  Makefile  Makefile.am  Makefile.mk  README.md  _config.yml  allegro5.cfg  bootstrap  configure.ac  documentation.am  gameplay.md  gnu-linux-release  index.css  index.md  macosx-bundle  macosx-release  mininim-0.9.2.tar.gz.sig  mininim.rc  prince.c  prince.h  windows-release
_layouts/: oitofelix-homepage.html
build-aux/: make-announcement-mail  ncftpput
dat/fat/: res750.pal
dat/kid/: kid.pal
dat/prince/: main.pal
dat/skel/: res750.pal
dat/vizier/: res750.pal
data/cga/: cga.lua
data/ega/: ega.lua
data/icons/: mininim.icns  mininim.xcf
data/levels/: 00.mim  01.mim  02.mim  03.mim  04.mim  05.mim  06.mim  07.mim  08.mim  09.mim  10.mim  11.mim  12.mim  13.mim  14.mim  15.mim
data/plv-levels/: 00.plv  01.plv  02.plv  03.plv  04.plv  05.plv  06.plv  07.plv  08.plv  09.plv  10.plv  11.plv  12.plv  13.plv  14.plv  15.plv
data/replays/: 01.mrp  02.mrp  03.mrp  04.mrp  05.mrp  06.mrp  07.mrp  08.mrp  09.mrp  10.mrp  11.mrp  12.mrp  13.mrp  14.mrp  title.mrp
data/sblast/: sblast.lua
data/script/: common.lua  default.glsl.vert  legacy.lua  mininim.lua  palette-table.glsl.frag
data/scripts/: common.lua  legacy.lua  mininim.lua  sblast.lua
data/vga/: vga.lua
data/vm-mac/: vm-mac.lua
doc/: Makefile.am  copying.texi  mininim.texi
doc/man/: Makefile.am  Makefile.mk
doc/mininim-figures/: events.xcf  joystick.xcf  keyboard.xcf  kid-hang-free-fall.xcf  level-layout.xcf  mouse-selection.xcf  relative-coordinates-directed-left.xcf  relative-coordinates-directed-right.xcf  relative-coordinates-non-directed.xcf
doc/philosophy/: essay-header.texi  gnu-free-documentation-license.texi  linux-and-the-gnu-system.texi  the-gnu-manifesto.texi  the-gnu-project.texi  why-free-software-needs-free-documentation.texi  why-software-should-not-have-owners.texi
doc/release/: ANNOUNCEMENT.texi  AUTHORS.texi  DONORS.texi  NEWS.texi  README.texi  THANKS.texi  TODO.texi  description.texi  donating.texi  latest-news.texi  release.texi.in  todo-items.texi
doc/www/: .symlinks  footer.texi  gendocs_template  header.shtml  navigation.texi
engine/: anim.c  anim.h  arch.c  arch.h  balcony.c  big-pillar.c  big-pillar.h  bricks.c  bricks.h  broken-floor.c  broken-floor.h  carpet.c  carpet.h  chopper.c  chopper.h  clock.c  clock.h  closer-floor.c  closer-floor.h  consistency.c  consistency.h  cutscenes.c  cutscenes.h  door.c  door.h  fight.c  fight.h  fire.c  fire.h  floor.c  floor.h  jaffar.c  jaffar.h  kid.c  kid.h  level-door.c  level-door.h  level.c  level.h  loose-floor.c  (+37 more)
engine/guard/: guard-attack.c  guard-attack.h  guard-defense.c  guard-defense.h  guard-die.c  guard-die.h  guard-fall.c  guard-fall.h  guard-hit.c  guard-hit.h  guard-normal.c  guard-normal.h  guard-vigilant.c  guard-vigilant.h  guard-walkb.c  guard-walkb.h  guard-walkf.c  guard-walkf.h  guard.c  guard.h
engine/kid/: kid-climb.c  kid-climb.h  kid-couch.c  kid-couch.h  kid-die.c  kid-die.h  kid-drink.c  kid-drink.h  kid-fall.c  kid-fall.h  kid-hang-free.c  kid-hang-free.h  kid-hang-wall.c  kid-hang-wall.h  kid-hang.c  kid-hang.h  kid-jump.c  kid-jump.h  kid-keep-sword.c  kid-keep-sword.h  kid-misstep.c  kid-misstep.h  kid-normal.c  kid-normal.h  kid-raise-sword.c  kid-raise-sword.h  kid-run-jump.c  kid-run-jump.h  kid-run.c  kid-run.h  kid-stabilize.c  kid-stabilize.h  kid-stairs.c  kid-stairs.h  kid-start-run.c  kid-start-run.h  kid-stop-run.c  kid-stop-run.h  kid-sword-attack.c  kid-sword-attack.h  (+24 more)
engine/wall/: wall-dcpc.c  wall-dcpc.h  wall-depedv.c  wall-depedv.h  wall-pv.c  wall-pv.h  wall.c  wall.h
kernel/: array.c  array.h  audio.c  audio.h  event.c  event.h  keyboard.c  keyboard.h  memory.c  memory.h  random.c  random.h  timer.c  timer.h  video.c  video.h  xerror.c
levels/: consistency-level.c  consistency-level.h  legacy-level.c  legacy-level.h  level-1.c  level-1.h  title.c  title.h
src/: actor.c  actor.h  anim.c  anim.h  arch.c  arch.h  audio-data.c  audio-data.h  balcony.c  balcony.h  big-pillar.c  big-pillar.h  bmenu.c  bmenu.h  box.c  box.h  bricks.c  bricks.h  broken-floor.c  broken-floor.h  carpet.c  carpet.h  chomper.c  chomper.h  chopper.c  chopper.h  clock.c  clock.h  closer-floor.c  closer-floor.h  colors.h  compatibility.h  consistency.c  consistency.h  constants.h  copyright-version.c  copyright-version.h  cutscenes.c  cutscenes.h  dat.c  (+92 more)
src/guard/: guard-attack.c  guard-attack.h  guard-defense.c  guard-defense.h  guard-die.c  guard-die.h  guard-fall.c  guard-fall.h  guard-hit.c  guard-hit.h  guard-normal.c  guard-normal.h  guard-sword-attack.c  guard-sword-attack.h  guard-sword-defense.c  guard-sword-defense.h  guard-sword-hit.c  guard-sword-hit.h  guard-sword-normal.c  guard-sword-normal.h  guard-sword-walkb.c  guard-sword-walkb.h  guard-sword-walkf.c  guard-sword-walkf.h  guard-vigilant.c  guard-vigilant.h  guard-walkb.c  guard-walkb.h  guard-walkf.c  guard-walkf.h  guard.c  guard.h
src/gui/: gui-coordinates-control.c  gui-coordinates-control.h  gui-directional-control.c  gui-directional-control.h  gui-editor-dialog.c  gui-editor-dialog.h  gui-editor-events-control.c  gui-editor-events-control.h  gui-editor-room-control.c  gui-editor-room-control.h  gui-editor-tabs.c  gui-editor-tabs.h  gui-editor-tile-control.c  gui-editor-tile-control.h  gui-editor-toolbar-control.c  gui-editor-toolbar-control.h  gui-editor-view-nav-control.c  gui-editor-view-nav-control.h  gui-icons.h  gui-menu.c  gui-menu.h  gui-mr-origin-control.c  gui-mr-origin-control.h  gui-page-control.c  gui-page-control.h  gui-place-control.c  gui-place-control.h  gui-position-control.c  gui-position-control.h  gui-room-control.c  gui-room-control.h  gui-row-control.c  gui-row-control.h  gui-tile-clipboard-control.c  gui-tile-clipboard-control.h  gui-tile-mirror-control.c  gui-tile-mirror-control.h  gui-tile-move-control.c  gui-tile-move-control.h  gui-tile-part-control.c  (+11 more)
tools/: decrement-indexes  decrement-number  fix-pictures  lua-gdb.py  luagdb.txt  palette  update-copyright-years
(+197 files in other folders)
